RESOLVED FIXED136788
Flash of page scrolled to wrong origin before restoring scroll position after swiping back to CNN front page from an article
https://bugs.webkit.org/show_bug.cgi?id=136788
Summary Flash of page scrolled to wrong origin before restoring scroll position after...
Tim Horton
Reported 2014-09-12 13:51:53 PDT
Attachments
patch (2.80 KB, patch)
2014-09-12 13:57 PDT, Tim Horton
sam: review+
Tim Horton
Comment 1 2014-09-12 13:57:05 PDT
Tim Horton
Comment 2 2014-09-12 14:11:07 PDT
Note You need to log in before you can comment on or make changes to this bug.