Source/WebKit2/UIProcess/mac/ViewGestureControllerMac.mm
@@ -693,8 +693,10 @@ void ViewGestureController::didHitRenderTreeSizeThreshold()
 
     m_swipeWaitingForRenderTreeSizeThreshold = false;
 
-    if (!m_swipeWaitingForVisuallyNonEmptyLayout)
-        removeSwipeSnapshotAfterRepaint();
+    if (!m_swipeWaitingForVisuallyNonEmptyLayout) {
+        // FIXME: Ideally we would call removeSwipeSnapshotAfterRepaint() here, but sometimes
+        // scroll position isn't done restoring until didFinishLoadForFrame, so we flash the wrong content.
+    }
 }
 
 void ViewGestureController::didFirstVisuallyNonEmptyLayoutForMainFrame()
@@ -704,9 +706,10 @@ void ViewGestureController::didFirstVisuallyNonEmptyLayoutForMainFrame()
 
     m_swipeWaitingForVisuallyNonEmptyLayout = false;
 
-    if (!m_swipeWaitingForRenderTreeSizeThreshold)
-        removeSwipeSnapshotAfterRepaint();
-    else {
+    if (!m_swipeWaitingForRenderTreeSizeThreshold) {
+        // FIXME: Ideally we would call removeSwipeSnapshotAfterRepaint() here, but sometimes
+        // scroll position isn't done restoring until didFinishLoadForFrame, so we flash the wrong content.
+    } else {
         m_swipeWatchdogAfterFirstVisuallyNonEmptyLayoutTimer.startOneShot(swipeSnapshotRemovalWatchdogAfterFirstVisuallyNonEmptyLayoutDuration.count());
         m_swipeWatchdogTimer.stop();
     }
